Fix bugs overflow in catalog and favicon

--- a/CP/css/style-product.css
+++ b/CP/css/style-product.css
@@ -193,6 +193,10 @@ select {
   transition: all .3s ease-in-out;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .modal__form {
   display: none;
   margin: auto;
